compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__underscore_after_decimal_point_case_statement.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 445
expression: "\npub fn main(x) {\n  case x {\n    0._1 -> \"wobble\"\n    _ -> \"wibble\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0._1 -> "wobble"
    _ -> "wibble"
  }
}


----- COMPILED JAVASCRIPT
export function main(x) {
  if (x === 0.1) {
    return "wobble";
  } else {
    return "wibble";
  }
}
