compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__underscore_after_octal_prefix.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 330
expression: "\npub fn main() {\n  0o_12_34\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  0o_12_34
}


----- COMPILED JAVASCRIPT
export function main() {
  return 0o12_34;
}
