compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__underscore_after_zero.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 390
expression: "\npub fn main() {\n  0_1_2_3\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  0_1_2_3
}


----- COMPILED JAVASCRIPT
export function main() {
  return 1_2_3;
}
