compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__zero_after_underscore_after_hex_prefix.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 401
expression: "\npub fn main() {\n  0x_0_1_2_3\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  0x_0_1_2_3
}


----- COMPILED JAVASCRIPT
export function main() {
  return 0x0_1_2_3;
}
